Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "Oshi no Ko Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166531-dAL5MsqDHUkj.jpg",
-      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Musical Theater/Acting/Revenge/Twins/Idol/Seinen/Male Protagonist/Urban/Drawing/Tsundere/Achronological Order\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Revenge/Twins/Idol/Seinen/Male Protagonist/Urban/Drawing/Tsundere/Achronological Order\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
     },
     {
       "id": "tt31131295",
@@ -40,10 +40,10 @@
       "type": "series",
       "name": "Suicide Squad ISEKAI",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166710-3G2croXhaCOm.jpg",
-      "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Isekai/Anti-Hero/Crime/Magic/Swordplay/Super Power/Female Protagonist/Meta/Crossover/Primarily Adult Cast/Prison/Language Barrier/CGI/Bisexual/Primarily Male Cast/Guns/Dragons/Nudity/War\nIn the crime-ridden city of Gotham, Amanda Waller, the head of A.R.G.U.S., has assembled a group of notorious criminals for a mission: Harley Quinn, Deadshot, Peacemaker, Clayface, and King Shark. These Super-Villains are sent into an otherworldly realm that’s connected to this world through a gate. It’s a world of swords and magic where orcs rampage and dragons rule the skies—an “ISEKAI”!<br>\n<br>\nWith lethal explosives planted in their necks, there’s no running or hiding, and failing the mission means a one-way ticket to the afterlife! Can Harley Quinn and her crew conquer this perilous ISEKAI realm?! Brace yourselves for the pulse-pounding saga of the elite task force known as the “Suicide Squad” as they embark on a jaw-dropping adventure!<br>\n<br>\n(Source: Warner Bros. Japan)"
+      "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Isekai/Anti-Hero/Crime/Female Protagonist/Crossover/Magic/War/Primarily Adult Cast/Swordplay/Super Power/Guns/Prison/Meta/Language Barrier/Primarily Male Cast/Dragons/CGI/Nudity\nIn the crime-ridden city of Gotham, Amanda Waller, the head of A.R.G.U.S., has assembled a group of notorious criminals for a mission: Harley Quinn, Deadshot, Peacemaker, Clayface, and King Shark. These Super-Villains are sent into an otherworldly realm that’s connected to this world through a gate. It’s a world of swords and magic where orcs rampage and dragons rule the skies—an “ISEKAI”!<br>\n<br>\nWith lethal explosives planted in their necks, there’s no running or hiding, and failing the mission means a one-way ticket to the afterlife! Can Harley Quinn and her crew conquer this perilous ISEKAI realm?! Brace yourselves for the pulse-pounding saga of the elite task force known as the “Suicide Squad” as they embark on a jaw-dropping adventure!<br>\n<br>\n(Source: Warner Bros. Japan)"
     },
     {
-      "id": "tt32332831",
+      "id": "tt3612626",
       "type": "series",
       "name": "Makeine: Too Many Losing Heroines!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171457-Z8tZRk7LhcZk.jpg",
@@ -75,7 +75,7 @@
       "type": "series",
       "name": "Pseudo Harem",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163623-pzR6vIHoJh0b.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Acting/Iyashikei/Episodic/Female Protagonist/Parody/School/School Club/Male Protagonist/Shounen/Meta\nEiji Kitahama joins the drama club with dreams of having a harem like the ones from his favorite manga. Rin Nanakura, an underclassman, finds herself crushing hard on Eiji and tries on different personas in his presence to win him over. No matter how she acts, one thing is certain—her feelings for Eiji continue to grow stronger. Will she ever be able to tell him the truth and be herself?<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Acting/Iyashikei/Episodic/Female Protagonist/School/Parody/School Club/Male Protagonist/Shounen/Meta\nEiji Kitahama joins the drama club with dreams of having a harem like the ones from his favorite manga. Rin Nanakura, an underclassman, finds herself crushing hard on Eiji and tries on different personas in his presence to win him over. No matter how she acts, one thing is certain—her feelings for Eiji continue to grow stronger. Will she ever be able to tell him the truth and be herself?<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32469108",
@@ -103,7 +103,7 @@
       "type": "series",
       "name": "SHOSHIMIN: How to Become Ordinary",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173295-5DIOnrTYiF0a.jpg",
-      "description": "Genres: Mystery, Slice of Life\nTags:Detective/School/Male Protagonist/Food/Female Protagonist/Crime/School Club\nKobato decides to become an honest, humble citizen after enduring a bitter experience known as “wisdom work.” He forms a pact with Osanai, his classmate with the same goal, and they plan to enter high school leading quiet lives. But for some reason, inexplicable events and disasters keep happening around them. Will Kobato and Osanai ever manage to live ordinary, peaceful lives?<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Mystery, Slice of Life\nTags:Detective/School/Male Protagonist/Female Protagonist/Food/Crime/School Club\nKobato decides to become an honest, humble citizen after enduring a bitter experience known as “wisdom work.” He forms a pact with Osanai, his classmate with the same goal, and they plan to enter high school leading quiet lives. But for some reason, inexplicable events and disasters keep happening around them. Will Kobato and Osanai ever manage to live ordinary, peaceful lives?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31141567",
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "Senpai is an Otokonoko",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163133-bdr9S2bdLoyj.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/LGBTQ+ Themes/Coming of Age/Primarily Teen Cast/School/Femboy/Bisexual/Josei/Male Protagonist/Female Protagonist\nFor Makoto Hanaoka, life’s about to get more complicated. Saki Aoi, a lively girl with loads of confidence, confesses her love for Makoto one day. When he fails to reciprocate, Saki declares she will be his first love! She shares her goal with a mutual friend, Ryuuji Taiga, who also confesses his crush on Makoto. Stuck in a love triangle, Makoto must find a way to make it work and have fun.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/Coming of Age/LGBTQ+ Themes/Primarily Teen Cast/School/Femboy/Female Protagonist/Bisexual/Josei/Male Protagonist\nFor Makoto Hanaoka, life’s about to get more complicated. Saki Aoi, a lively girl with loads of confidence, confesses her love for Makoto one day. When he fails to reciprocate, Saki declares she will be his first love! She shares her goal with a mutual friend, Ryuuji Taiga, who also confesses his crush on Makoto. Stuck in a love triangle, Makoto must find a way to make it work and have fun.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt18311412",
@@ -180,10 +180,10 @@
       "type": "series",
       "name": "VTuber Legend: How I Went Viral after Forgetting to Turn Off My Stream",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx160488-Fqeh9b9iDOZF.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Otaku Culture/VTuber/Female Protagonist/Primarily Female Cast/Satire/Slapstick/Primarily Adult Cast/Yuri/Urban/Video Games\nYuki Tanaka is a VTuber at Live-On, one of Japan’s largest VTuber companies, as the polite and ladylike Awayuki Kokorone. One day, she forgets to end the stream, and viewers see her real personality—irreverent, improper, and prone to imbibing after a long day. Yuki is surprised to find that her accident caused her rankings to multiply, so she doubles down and gets to work. She’ll be a star yet!<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Otaku Culture/VTuber/Female Protagonist/Primarily Female Cast/Slapstick/Satire/Yuri/Primarily Adult Cast/Urban/Video Games\nYuki Tanaka is a VTuber at Live-On, one of Japan’s largest VTuber companies, as the polite and ladylike Awayuki Kokorone. One day, she forgets to end the stream, and viewers see her real personality—irreverent, improper, and prone to imbibing after a long day. Yuki is surprised to find that her accident caused her rankings to multiply, so she doubles down and gets to work. She’ll be a star yet!<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt30970523",
+      "id": "tt1068993",
       "type": "series",
       "name": "The Magical Girl and the Evil Lieutenant Used to Be Archenemies",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170938-kkeDCKGSUNaV.jpg",
