Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -68,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt1345776"
       },
-      "description": "Genres: Music\nTags:Heterosexual/Primarily Female Cast\nAn untidy room. Empty beer tins, empty wine bottles, a half-empty glass of whisky... A girl is getting up absent-mindedly and starts preparing herself. YOUR morning starts. Lazy and hard-to-wake-up YOU. The emoticon is ME watching over YOU. I play tricks on YOU, while YOU are playing the guitar and drinking. One day, in town, YOU walk past THE CHILDHOOD FRIEND who is buying an Anemone I liked, and remembering that I liked them, YOU rush out to buy them. THE CHILDHOOD FRIEND displays the Anemone with care. One day, years after I died, YOU hear noise from the closet. Opened, YOU see MY garden right in front of YOU. Overflowing emotions of ME and YOU. When exiting from the room with memories, a picture of the Anemone that YOU painted is displayed in YOUR new room.<br>\n<br>\n(Source: Annecy Festival)"
+      "description": "Genres: Music\nTags:Heterosexual/Primarily Female Cast\nBeer cans and a whisky glass are placed in an open space on the floor. Though a bit disorganized, ”Your” room is filled with art supplies and an electric guitar lining the perimeter of the room.<br><br>\nThe alarm on a phone goes off, and “You” leisurely wake up to start your day.<br><br>\nThe anemone flower that “I” liked. A precious flower that holds memories which tie “You” and “I” together. After opening your bedroom closet one day, “You” become engrossed in your memories of \"Me.\" A story that represents “Me,” “You,” our “Childhood Friend,” and our goodbyes.<br>\n<br>\n(Source: Official Website)"
     },
     {
       "id": "tt0856346",
