--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "Oshi no Ko Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166531-dAL5MsqDHUkj.jpg",
-      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Revenge/Twins/Idol/Seinen/Male Protagonist/Urban/Drawing/Tsundere/Achronological Order\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Revenge/Twins/Idol/Male Protagonist/Seinen/Urban/Drawing/Tsundere/Achronological Order\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
     },
     {
       "id": "tt31131295",
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "Tower of God Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153406-dU2RLKgMUF2U.jpg",
-      "description": "Genres: Action, Adventure, Drama, Fantasy, Mystery\nTags:Anti-Hero/Shounen/Male Protagonist/Criminal Organization/Ensemble Cast/Magic/Politics/Space Opera/Super Power/Terrorism/Philosophy/Gods/Cultivation/Primarily Adult Cast\nThe second season of <i>Kami no Tou: Tower of God</i>.\n<br><br>\nJa Wangnan can’t seem to pass the 20th Floor. Even after failing time and time again, he refuses to give up. On his journey, he meets a mysterious and powerful character named Viole. Wangnan invites Viole to join his team of Regulars. Their journey continues with new challenges at every turn.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Drama, Fantasy, Mystery\nTags:Anti-Hero/Shounen/Criminal Organization/Male Protagonist/Ensemble Cast/Space Opera/Magic/Politics/Terrorism/Super Power/Philosophy/Cultivation/Gods/Primarily Adult Cast\nThe second season of <i>Kami no Tou: Tower of God</i>.\n<br><br>\nJa Wangnan can’t seem to pass the 20th Floor. Even after failing time and time again, he refuses to give up. On his journey, he meets a mysterious and powerful character named Viole. Wangnan invites Viole to join his team of Regulars. Their journey continues with new challenges at every turn.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32332970",
@@ -117,7 +117,7 @@
       "type": "series",
       "name": "2.5 Dimensional Seduction",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx158559-eVc9cNSmcUix.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Cosplay/Male Protagonist/Otaku Culture/Heterosexual/Female Harem/School Club/Primarily Female Cast/Love Triangle/Nudity/Shounen/Photography/Gyaru\n<i>“I have no interest in real girls!” </i><br><br>\n\nSo claims Okumura, the president of the school’s manga club. He’s your typical otaku, obsessed with a sexy (fictional) 2D manga character known as Lilliel. Then the new school year starts, and a (real!) 3D girl named Lilysa whose passion is cosplay joins the club. Lilysa convinces Okumura to become her photographer–and guess who her favorite manga character is? Not only that, but Lilysa is into modeling the fetishy stuff! The boundaries between 2D and 3D start to blur as this hot-blooded romantic comedy unfolds.<br>\n<br>\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Cosplay/Otaku Culture/Male Protagonist/Heterosexual/School Club/Female Harem/Primarily Female Cast/Love Triangle/Nudity/Shounen/Photography/Gyaru\n<i>“I have no interest in real girls!” </i><br><br>\n\nSo claims Okumura, the president of the school’s manga club. He’s your typical otaku, obsessed with a sexy (fictional) 2D manga character known as Lilliel. Then the new school year starts, and a (real!) 3D girl named Lilysa whose passion is cosplay joins the club. Lilysa convinces Okumura to become her photographer–and guess who her favorite manga character is? Not only that, but Lilysa is into modeling the fetishy stuff! The boundaries between 2D and 3D start to blur as this hot-blooded romantic comedy unfolds.<br>\n<br>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt19406880",
@@ -134,18 +134,18 @@
       "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Demons/Amnesia/Post-Apocalyptic/Swordplay/Guns/Lost Civilization/Elf/Fairy/Angels\nIn a world where humans triumphed in a great war, Kai guards sealed crypts containing their enemies. But when “World Rebirth” overwrites history, he’s thrust into an alternate reality where humanity lost the war and he’s been forgotten by everyone he knows. Now, this lost hero must rise to restore the world’s balance!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt0994314",
-      "type": "series",
-      "name": "Code Geass: Rozé of the Recapture",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx126830-Mx56p5DMIjiq.png",
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi, Thriller\nTags:Real Robot/Super Power/War/Robots/Military/Politics/Male Protagonist/Seinen\nYear Seven of the Kowa Period, in the former Hokkaido Block occupied by the Neo-Britannian Empire, live mercenary brothers known as the Nameless Mercenaries. The eldest, Ash, has excellent athletic ability and advanced Knightmare Frame controlling skills, while the youngest, Rozé, is clearheaded and oversees intel gathering and devising strategies. Due to an impregnable wall of energy called the Situmpe Wall, for four years the 100th emperor who stopped the Black Knights' liberation plan, Callis al Britannia, has been trying to plunge the world into chaos once again with the help of his servant, Norland, and his Einberg Knights. Upon receiving a request, Rozé and Ash, along with the Seven Shining Stars resistance group confront the Empire to recapture Princess Sakuya.<br><br>\n\n(Source: Hulu)<br><br>\n\n<i>Note: The series had a four-part theatrical pre-screening in Japan starting in May 2024. Streaming worldwide release begins in June 2024.<br><br>\n\n• Part 1 releasing theatrically on May 10, 2024.<br>\n• Part 2 releasing theatrically on June 7, 2024.<br>\n• Part 3 releasing theatrically on July 5, 2024.<br>\n• Final Part releasing theatrically on August 2, 2024.\n"
-    },
-    {
       "id": "tt12331304",
       "type": "series",
       "name": "Our Last Crusade or the Rise of a New World Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx139825-rFlrzdRZmlYK.jpg",
       "description": "Genres: Action, Fantasy, Romance\nTags:War/Magic/Female Protagonist/Male Protagonist/Heterosexual/Witch/Swordplay/Nudity/Politics\nThe second season of <i>Kimi to Boku no Saigo no Senjou, Aruiwa Sekai ga Hajimaru Seisen</i>.<br><br>\nIska guards Sisbell, sparking Alice's jealousy. Amid a conspiracy, can they thwart personal disputes and war?<br><br>\n(Source: Crunchyroll News)"
+    },
+    {
+      "id": "tt0994314",
+      "type": "series",
+      "name": "Code Geass: Rozé of the Recapture",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx126830-Mx56p5DMIjiq.png",
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi, Thriller\nTags:Real Robot/Super Power/War/Robots/Military/Politics/Male Protagonist/Seinen\nYear Seven of the Kowa Period, in the former Hokkaido Block occupied by the Neo-Britannian Empire, live mercenary brothers known as the Nameless Mercenaries. The eldest, Ash, has excellent athletic ability and advanced Knightmare Frame controlling skills, while the youngest, Rozé, is clearheaded and oversees intel gathering and devising strategies. Due to an impregnable wall of energy called the Situmpe Wall, for four years the 100th emperor who stopped the Black Knights' liberation plan, Callis al Britannia, has been trying to plunge the world into chaos once again with the help of his servant, Norland, and his Einberg Knights. Upon receiving a request, Rozé and Ash, along with the Seven Shining Stars resistance group confront the Empire to recapture Princess Sakuya.<br><br>\n\n(Source: Hulu)<br><br>\n\n<i>Note: The series had a four-part theatrical pre-screening in Japan starting in May 2024. Streaming worldwide release begins in June 2024.<br><br>\n\n• Part 1 releasing theatrically on May 10, 2024.<br>\n• Part 2 releasing theatrically on June 7, 2024.<br>\n• Part 3 releasing theatrically on July 5, 2024.<br>\n• Final Part releasing theatrically on August 2, 2024.\n"
     },
     {
       "id": "tt1745240",
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "Senpai is an Otokonoko",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163133-bdr9S2bdLoyj.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/Coming of Age/LGBTQ+ Themes/School/Primarily Teen Cast/Femboy/Female Protagonist/Bisexual/Josei/Male Protagonist\nFor Makoto Hanaoka, life’s about to get more complicated. Saki Aoi, a lively girl with loads of confidence, confesses her love for Makoto one day. When he fails to reciprocate, Saki declares she will be his first love! She shares her goal with a mutual friend, Ryuuji Taiga, who also confesses his crush on Makoto. Stuck in a love triangle, Makoto must find a way to make it work and have fun.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/Coming of Age/LGBTQ+ Themes/School/Primarily Teen Cast/Femboy/Female Protagonist/Male Protagonist/Bisexual/Josei\nFor Makoto Hanaoka, life’s about to get more complicated. Saki Aoi, a lively girl with loads of confidence, confesses her love for Makoto one day. When he fails to reciprocate, Saki declares she will be his first love! She shares her goal with a mutual friend, Ryuuji Taiga, who also confesses his crush on Makoto. Stuck in a love triangle, Makoto must find a way to make it work and have fun.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt18311412",
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "Dahlia in Bloom: Crafting a Fresh Start with Magical Tools",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168623-30sdDCCLjsEW.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Female Protagonist/Heterosexual/Magic/Work/Isekai/Shoujo/Arranged Marriage/Crossdressing\nAfter a workaholic life in Japan, Dahlia is reborn as a magical maven in a new world, but her afterlife takes an unexpected turn. Engaged, betrayed, and orphaned—all before the honeymoon? Talk about a plot twist! Watch as Dahlia turns heartbreak into wand-making brilliance and declares her independence. In this story, the real magic is self-discovery, and Dahlia’s the sorceress of her own destiny.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Female Protagonist/Heterosexual/Magic/Work/Isekai/Shoujo/Arranged Marriage/Crossdressing/Economics\nAfter a workaholic life in Japan, Dahlia is reborn as a magical maven in a new world, but her afterlife takes an unexpected turn. Engaged, betrayed, and orphaned—all before the honeymoon? Talk about a plot twist! Watch as Dahlia turns heartbreak into wand-making brilliance and declares her independence. In this story, the real magic is self-discovery, and Dahlia’s the sorceress of her own destiny.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32333055",
