--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -21,12 +21,12 @@
       "description": "Genres: Drama, Supernatural\nTags:Coming of Age\n<i>Fureru</i> is a coming-of-age film set in present-day Tokyo, centering on childhood friends who find a creature with mysterious powers that pushes them to discover the bonds that tie the three students together. <br><br>\n(Source: Crunchyroll News, edited)"
     },
     {
-      "id": "tt28369144",
+      "id": "kitsu:48666",
       "type": "movie",
       "name": "30-sai made Doutei da to Mahou Tsukai ni Nareru Rashii: Tokubetsu-hen",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176470-QfMtYL4BEmDn.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt28369144"
+        "defaultVideoId": "kitsu:48666"
       },
       "description": "Genres: Comedy, Romance, Slice of Life, Supernatural\nTags:Boys' Love\nMovie compiling <i>30-sai made Doutei da to Mahou Tsukai ni Nareru Rashii</i> which also has new footage content not in the TV anime."
     },
