--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,16 +1,6 @@
 {
   "metas": [
     {
-      "id": "tt6634910",
-      "type": "movie",
-      "name": "OVERLORD: The Sacred Kingdom",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx133845-dcRFG8lscdHJ.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt6634910"
-      },
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Skeleton/Magic/Female Harem/Anti-Hero/Demons/Primarily Adult Cast/Male Protagonist/Maids\nTheatrical follow-up to <i>Overlord IV</i>. The film will cover the \"Holy Kingdom\" arc.<br><br>\nAfter twelve years of playing his favorite MMORPG game, Momonga logs in for the last time only to find himself transported into its world playing it indefinitely. Throughout his adventures, his avatar ascends to the title of Sorcerer King Ains Ooal Gown.\n<br><br>\nOnce prosperous but now on the brink of ruin, The Sacred Kingdom enjoyed years of peace after construction of an enormous wall protecting them from neighboring invasions. But, one day this comes to an end when the Demon Emperor Jaldabaoth arrives with an army of villainous demi-humans. \n<br><br>\nFearing invasion of their own lands, the neighboring territory of the Slane Theocracy is forced to beg their enemies at the Sorcerer Kingdom for help. Heeding the call, Momonga, now known as the Sorcerer King Ains Ooal Gown, rallies the Sorcerer Kingdom and its undead army to join the fight alongside the Sacred Kingdom and the Slane Theocracy in hopes to defeat the Demon Emperor. <br><br>\n(Source: Crunchyroll, edited)"
-    },
-    {
       "id": "tt30467885",
       "type": "movie",
       "name": "Fureru.",
@@ -58,7 +48,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt27479417"
       },
-      "description": "Genres: Drama, Music\nTags:Primarily Female Cast/Band\nCompilation films of <i>BanG Dream! It's MyGO!!!!!</i>"
+      "description": "Genres: Drama, Music\nTags:Band/Primarily Female Cast\nCompilation films of <i>BanG Dream! It's MyGO!!!!!</i>"
     },
     {
       "id": "tt27117596",
@@ -78,7 +68,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32579772"
       },
-      "description": "Genres: Comedy\nTags:CGI/Animals/Cars/Artificial Intelligence\nThe story begins with the emergence of the first high-tech molcar in Molcity, with drivers beginning to ride state-of-the-art AI-driven Molcars. Potato and friends get involved in a chase between a mysterious organization and a Molcar AI named Cannon, and are saved by a talented driver. Potato finds out that the driver is in search of his missing Molcar, and gets the idea to use Cannon's AI functionality to help with the search.\n<br><br>\n(Source: Anime News Network, edited)<br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced.</i>"
+      "description": "Genres: Comedy\nTags:CGI/Artificial Intelligence/Cars/Animals\nThe story begins with the emergence of the first high-tech molcar in Molcity, with drivers beginning to ride state-of-the-art AI-driven Molcars. Potato and friends get involved in a chase between a mysterious organization and a Molcar AI named Cannon, and are saved by a talented driver. Potato finds out that the driver is in search of his missing Molcar, and gets the idea to use Cannon's AI functionality to help with the search.\n<br><br>\n(Source: Anime News Network, edited)<br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced.</i>"
     },
     {
       "id": "tt30008198",
@@ -99,6 +89,26 @@
         "defaultVideoId": "tt0306365"
       },
       "description": "Genres: Comedy\nTags:Ninja\nnull"
+    },
+    {
+      "id": "tt33318428",
+      "type": "movie",
+      "name": "Inazuma Eleven: Soushuuhen - Densetsu no Kickoff",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180804-XedQP8o3pUCO.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt33318428"
+      },
+      "description": "Genres: Action, Sports\nTags:\nCompilation film of <i>Inazuma Eleven;</i> a recap of the original video game and the first 26 episodes of the series which focuses on the matches."
+    },
+    {
+      "id": "tt33318548",
+      "type": "movie",
+      "name": "Inazuma Eleven: Aratanaru Eiyuutachi no Joshou",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180806-K1PAxlhjN2TN.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt33318548"
+      },
+      "description": "Genres: Action, Sports\nTags:\nAdaptation of the prologue of \"Inazuma Eleven: Victory Road\" video game."
     }
   ]
 }
