--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt3114358"
       },
-      "description": "Genres: Drama, Sports\nTags:Full CGI/Primarily Female Cast/Primarily Teen Cast/Female Protagonist/School Club\nA high-school girl, Etsuko, just spends her days without any aims or purpose, until one day, Riina, a transfer student, asks her help to set up a boat club. Although Etsuko reluctantly accepts after hearing Riina speak passionately about her dream, she gradually starts to embrace the club after spending time with her teammates. <br><br>\n(Source: Annecy Festival)"
+      "description": "Genres: Drama, Sports\nTags:Full CGI/School Club/Female Protagonist/Primarily Teen Cast/Primarily Female Cast\nA high-school girl, Etsuko, just spends her days without any aims or purpose, until one day, Riina, a transfer student, asks her help to set up a boat club. Although Etsuko reluctantly accepts after hearing Riina speak passionately about her dream, she gradually starts to embrace the club after spending time with her teammates. <br><br>\n(Source: Annecy Festival)"
     },
     {
       "id": "tt27479417",
@@ -81,6 +81,16 @@
       "description": "Genres: Action, Comedy, Sci-Fi\nTags:\nTheatrical cut of the Kintama Arc (episodes 253-256). The movie is a part of the \"Gintama 20th Anniversary Project\"."
     },
     {
+      "id": "tt10534392",
+      "type": "movie",
+      "name": "Inazuma Eleven: Soushuuhen - Densetsu no Kickoff",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180804-XedQP8o3pUCO.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt10534392"
+      },
+      "description": "Genres: Action, Sports\nTags:\nCompilation film of <i>Inazuma Eleven;</i> a recap of the original video game and the first 26 episodes of the series which focuses on the matches."
+    },
+    {
       "id": "tt0306365",
       "type": "movie",
       "name": "Nintama Rantarou: Dokutake Ninja-tai Saikyоu no Gunshi",
@@ -91,24 +101,14 @@
       "description": "Genres: Comedy\nTags:Ninja\nnull"
     },
     {
-      "id": "tt33318428",
-      "type": "movie",
-      "name": "Inazuma Eleven: Soushuuhen - Densetsu no Kickoff",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180804-XedQP8o3pUCO.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt33318428"
-      },
-      "description": "Genres: Action, Sports\nTags:\nCompilation film of <i>Inazuma Eleven;</i> a recap of the original video game and the first 26 episodes of the series which focuses on the matches."
-    },
-    {
-      "id": "tt33318548",
+      "id": "tt1794796",
       "type": "movie",
       "name": "Inazuma Eleven: Aratanaru Eiyuutachi no Joshou",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180806-K1PAxlhjN2TN.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt33318548"
+        "defaultVideoId": "tt1794796"
       },
-      "description": "Genres: Action, Sports\nTags:\nAdaptation of the prologue of \"Inazuma Eleven: Victory Road\" video game."
+      "description": "Genres: Action, Sports\nTags:Football\nAdaptation of the prologue of \"Inazuma Eleven: Victory Road\" video game."
     }
   ]
 }
