--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -33,7 +33,7 @@
       "type": "series",
       "name": "BLEACH: Thousand-Year Blood War - The Conflict",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169755-Rqb7MjnzdTc6.jpg",
-      "description": "Genres: Action, Adventure, Supernatural\nTags:War/Swordplay/Super Power/Gods/Male Protagonist/Shounen/Urban Fantasy\nThe third part of <i>BLEACH: Sennen Kessen-hen</i>. "
+      "description": "Genres: Action, Adventure, Supernatural\nTags:War/Swordplay/Super Power/Urban Fantasy/Gods/Male Protagonist/Shounen\nThe third part of <i>BLEACH: Sennen Kessen-hen</i>. "
     },
     {
       "id": "tt4046802",
@@ -113,7 +113,7 @@
       "description": "Genres: Drama, Mystery\nTags:Detective/Work/Male Protagonist\nThe second season of <i>Kamonohashi Ron no Kindan Suiri</i>."
     },
     {
-      "id": "tt9828562",
+      "id": "tt32512773",
       "type": "series",
       "name": "Loner Life in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173693-SDOP5zakdqnP.png",
@@ -134,18 +134,18 @@
       "description": "Genres: Romance\nTags:Marriage/Office Lady/Fake Relationship/Kuudere/Heterosexual/Work/Seinen/Male Protagonist/Primarily Adult Cast/Female Protagonist/Rural\nTakuya and Rika are coworkers in a travel agency in Tokyo. They’re both single, but they don’t mind, since they’re introverts with fulfilling lives at home. Unfortunately, now their job is looking to staff an office in Siberia, and non-married employees are the first to be considered. Rika is desperate to avoid the transfer and goes to Takuya with an idea: if they pretend they’re getting married in a year, they can stay in Tokyo. The only problem is the two of them barely know each other! If these two quiet coworkers “fake” a relationship, will it turn into something real?<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt29473209",
-      "type": "series",
-      "name": "After-school Hanako-kun Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170893-zqmpX7iYUumi.jpg",
-      "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Youkai/Ghost/School/Mythology/Episodic/Ensemble Cast\nContinuation of <i>Houkago Shounen Hanako-kun.</i> <br><br>\nThe spirit Hanako-kun and his human assistant, first-year student Nene Yashiro, keep the peace between supernatural forces and the students of Kamome Academy. When they’re not fighting to maintain balance between the living and spirit worlds, how do they spend their time? Join Hanako-kun and Nene on their adventures after school!<br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32812118",
       "type": "series",
       "name": "I’ll Become a Villainess Who Goes Down in History",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168139-nGLXIdSksKCI.jpg",
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Isekai/Josei\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)"
+    },
+    {
+      "id": "tt29473209",
+      "type": "series",
+      "name": "After-school Hanako-kun Part 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170893-zqmpX7iYUumi.jpg",
+      "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Youkai/Ghost/School/Mythology/Episodic/Ensemble Cast\nContinuation of <i>Houkago Shounen Hanako-kun.</i> <br><br>\nThe spirit Hanako-kun and his human assistant, first-year student Nene Yashiro, keep the peace between supernatural forces and the students of Kamome Academy. When they’re not fighting to maintain balance between the living and spirit worlds, how do they spend their time? Join Hanako-kun and Nene on their adventures after school!<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt2552230",
@@ -246,6 +246,13 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Psychological\nTags:Male Protagonist/Magic/Seinen/Swordplay\nNoel has grown up idolizing his grandfather, a legendary adventurer of the class known as Seekers. But when it comes time for Noel to set out on his own, much to his dismay, he turns out to be a Talker: a support class with meager abilities. But Noel’s got ambition in spades–and the smarts to match–so he’s determined to do whatever it takes to make the world know his name!<br>\n<br>\n(Source: Seven Seas Entertainment)"
     },
     {
+      "id": "tt30523856",
+      "type": "series",
+      "name": "Ao no Miburo",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169258-kj8qoomfAKsB.jpg",
+      "description": "Genres: Drama\nTags:Male Protagonist/Historical/Samurai/Shounen\nIt's 1863, the twilight of the shogunate, and Japan is on the cusp of monumental change. The streets of the nation's capital are soaked in blood as political upheaval and rising tensions between masterless, wandering ronin and government samurai set the stage for one of the most turbulent times in Japan's history. Young orphan Nio is no stranger to the harsh realities of the world, and yet he can't help but cling to his burning passion for justice and desire to change the world for the better.<br><br>\n\nOne day, he crosses paths with two men who will become central figures of the coming revolution: Hijikata Toshizo and Okita Souji, two of the founding members of a group of hated ronin known as the Miburo—who would later become known as the Shinsengumi. Inspired by the efforts of the so-called \"Blues Wolves of Mibu,\" Nio decides to join the ranks to help carve a path to the world he wishes to see. But with new betrayals and reversals every day, will Nio be able to stay true to his conscience?<br><br>\n\n(Source: Kodansha USA, edited)"
+    },
+    {
       "id": "tt20228550",
       "type": "series",
       "name": "Nanatsu no Taizai: Mokushiroku no Yonkishi 2nd Season",
@@ -257,14 +264,7 @@
       "type": "series",
       "name": "Kabushiki Gaisha Magi Lumiere",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171025-3HsBogFXuG1p.jpg",
-      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Work/Female Protagonist/Primarily Adult Cast/Urban Fantasy/Shounen/Software Development/Crossdressing\n“Magical Girl”— A profession that undertakes the work of exterminating a kind of natural disaster called “Kaii.” Kana Sakuragi, a female college student who struggles with job hunting, is picked up by a magical girl startup company and…?! Magical Girl work-life starts now!\n<br><br>\n(Source: MANGA Plus)"
-    },
-    {
-      "id": "tt30523856",
-      "type": "series",
-      "name": "Ao no Miburo",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169258-kj8qoomfAKsB.jpg",
-      "description": "Genres: Drama\nTags:Male Protagonist/Historical/Samurai/Shounen\nIt's 1863, the twilight of the shogunate, and Japan is on the cusp of monumental change. The streets of the nation's capital are soaked in blood as political upheaval and rising tensions between masterless, wandering ronin and government samurai set the stage for one of the most turbulent times in Japan's history. Young orphan Nio is no stranger to the harsh realities of the world, and yet he can't help but cling to his burning passion for justice and desire to change the world for the better.<br><br>\n\nOne day, he crosses paths with two men who will become central figures of the coming revolution: Hijikata Toshizo and Okita Souji, two of the founding members of a group of hated ronin known as the Miburo—who would later become known as the Shinsengumi. Inspired by the efforts of the so-called \"Blues Wolves of Mibu,\" Nio decides to join the ranks to help carve a path to the world he wishes to see. But with new betrayals and reversals every day, will Nio be able to stay true to his conscience?<br><br>\n\n(Source: Kodansha USA, edited)"
+      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Shounen/Crossdressing\n“Magical Girl”— A profession that undertakes the work of exterminating a kind of natural disaster called “Kaii.” Kana Sakuragi, a female college student who struggles with job hunting, is picked up by a magical girl startup company and…?! Magical Girl work-life starts now!\n<br><br>\n(Source: MANGA Plus)"
     },
     {
       "id": "tt32524882",
