Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "Re:ZERO -Starting Life in Another World- Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163134-e7ff17XOlj10.png",
-      "description": "Genres: Action, Adventure, Drama, Fantasy, Psychological, Romance, Thriller\nTags:Isekai/Cult/Witch/Magic/Male Protagonist/Super Power/Elf/Heterosexual/Time Loop/Ensemble Cast/Female Protagonist/Maids/Tomboy/Primarily Adult Cast\nThe third season of <i>Re:Zero kara Hajimeru Isekai Seikatsu</i>. <br><br>\n\nA year has passed since Subaru’s victory at the Sanctuary. He savors a life of fulfillment while Emilia’s camp stands united for the royal selection—until a fateful letter arrives. Anastasia, a royal selection candidate, has invited Emilia to the Watergate City of Priestella. But as the party begins its journey, crisis stirs beneath the surface and Subaru meets a cruel fate once again.<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes:<br>\nThe first episode has an extended runtime of ~90 minutes, and received an early premiere at Anime Expo on July 5, 2024.</i>"
+      "description": "Genres: Action, Adventure, Drama, Fantasy, Psychological, Romance, Thriller\nTags:Isekai/Cult/Witch/Magic/Male Protagonist/Super Power/Elf/Heterosexual/Time Loop/Ensemble Cast/Primarily Adult Cast/Female Protagonist/Maids/Tomboy\nThe third season of <i>Re:Zero kara Hajimeru Isekai Seikatsu</i>. <br><br>\n\nA year has passed since Subaru’s victory at the Sanctuary. He savors a life of fulfillment while Emilia’s camp stands united for the royal selection—until a fateful letter arrives. Anastasia, a royal selection candidate, has invited Emilia to the Watergate City of Priestella. But as the party begins its journey, crisis stirs beneath the surface and Subaru meets a cruel fate once again.<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes:<br>\nThe first episode has an extended runtime of ~90 minutes, and received an early premiere at Anime Expo on July 5, 2024.</i>"
     },
     {
       "id": "tt15222080",
@@ -67,7 +67,7 @@
       "id": "tt32639706",
       "type": "series",
       "name": "Blue Box",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170942-KusF5XVZbskE.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170942-B77wUSM1jQTu.jpg",
       "description": "Genres: Romance, Slice of Life, Sports\nTags:Heterosexual/Coming of Age/Athletics/Badminton/School Club/School/Male Protagonist/Basketball/Female Protagonist/Primarily Teen Cast/Shounen\n<i>Do these sports-crossed lovers have a chance?</i>\n<br><br>\nTaiki Inomata loves badminton, but he has a long way to go before he can reach nationals. When Taiki sees upperclassman Chinatsu Kano practicing her heart out on the girls’ basketball team, he falls for her hard. After an unexpected turn of events brings the two closer together, sports might not be the first thing on their minds anymore!<br><br>(Source: TMS Anime)"
     },
     {
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "Tensei Kizoku, Kantei Skill de Nariagaru 2nd Season",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178434-UtRCL4WqNcgv.png",
-      "description": "Genres: Adventure, Fantasy\nTags:Isekai/Coming of Age/Magic/Swordplay/Male Protagonist/Shounen\nThe second season of <i>Tensei Kizoku, Kantei Skill de Nariagaru</i>."
+      "description": "Genres: Adventure, Fantasy\nTags:Coming of Age/Isekai/Magic/Swordplay/Male Protagonist/Shounen\nThe second season of <i>Tensei Kizoku, Kantei Skill de Nariagaru</i>."
     },
     {
       "id": "tt30689669",
@@ -113,7 +113,7 @@
       "description": "Genres: Drama, Mystery\nTags:Detective/Work/Male Protagonist\nThe second season of <i>Kamonohashi Ron no Kindan Suiri</i>."
     },
     {
-      "id": "tt9828562",
+      "id": "tt32512773",
       "type": "series",
       "name": "Loner Life in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173693-SDOP5zakdqnP.png",
@@ -141,18 +141,18 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Isekai/Josei\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt29473209",
-      "type": "series",
-      "name": "After-school Hanako-kun Part 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170893-zqmpX7iYUumi.jpg",
-      "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Youkai/Ghost/School/Mythology/Episodic/Ensemble Cast\nContinuation of <i>Houkago Shounen Hanako-kun.</i> <br><br>\nThe spirit Hanako-kun and his human assistant, first-year student Nene Yashiro, keep the peace between supernatural forces and the students of Kamome Academy. When they’re not fighting to maintain balance between the living and spirit worlds, how do they spend their time? Join Hanako-kun and Nene on their adventures after school!<br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt2552230",
       "type": "series",
       "name": "Demon Lord 2099",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163135-NjvXyXvTYSHH.jpg",
       "description": "Genres: Action, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Demons/Magic/Male Protagonist/Primarily Adult Cast\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
+    },
+    {
+      "id": "tt29473209",
+      "type": "series",
+      "name": "After-school Hanako-kun Part 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170893-zqmpX7iYUumi.jpg",
+      "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Youkai/Ghost/School/Mythology/Episodic/Ensemble Cast\nContinuation of <i>Houkago Shounen Hanako-kun.</i> <br><br>\nThe spirit Hanako-kun and his human assistant, first-year student Nene Yashiro, keep the peace between supernatural forces and the students of Kamome Academy. When they’re not fighting to maintain balance between the living and spirit worlds, how do they spend their time? Join Hanako-kun and Nene on their adventures after school!<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32792739",
@@ -176,7 +176,7 @@
       "description": "Genres: Drama, Fantasy, Slice of Life, Supernatural\nTags:Youkai/Iyashikei/Male Protagonist/Rural/Shoujo\nThe seventh season of <i>Natsume Yuujinchou.<br>"
     },
     {
-      "id": "tt10443362",
+      "id": "tt19244410",
       "type": "series",
       "name": "Demon Lord, Retry! R",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168500-q5aLjjfUrZvy.jpg",
@@ -197,7 +197,7 @@
       "description": "Genres: Action, Adventure, Drama, Romance\nTags:Samurai/Swordplay/Male Protagonist/Historical/Shounen\nThe second season of <i>Rurouni Kenshin: Meiji Kenkaku Romantan (2023)</i>."
     },
     {
-      "id": "tt28299608",
+      "id": "tt21939220",
       "type": "series",
       "name": "MF GHOST Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171642-A9JRc46pEjpe.png",
@@ -246,18 +246,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Psychological\nTags:Male Protagonist/Magic/Seinen/Swordplay\nNoel has grown up idolizing his grandfather, a legendary adventurer of the class known as Seekers. But when it comes time for Noel to set out on his own, much to his dismay, he turns out to be a Talker: a support class with meager abilities. But Noel’s got ambition in spades–and the smarts to match–so he’s determined to do whatever it takes to make the world know his name!<br>\n<br>\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt30476504",
-      "type": "series",
-      "name": "Kabushiki Gaisha Magi Lumiere",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171025-3HsBogFXuG1p.jpg",
-      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Shounen/Crossdressing\n“Magical Girl”— A profession that undertakes the work of exterminating a kind of natural disaster called “Kaii.” Kana Sakuragi, a female college student who struggles with job hunting, is picked up by a magical girl startup company and…?! Magical Girl work-life starts now!\n<br><br>\n(Source: MANGA Plus)"
-    },
-    {
       "id": "tt30523856",
       "type": "series",
       "name": "Ao no Miburo",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169258-kj8qoomfAKsB.jpg",
       "description": "Genres: Drama\nTags:Male Protagonist/Historical/Samurai/Shounen\nIt's 1863, the twilight of the shogunate, and Japan is on the cusp of monumental change. The streets of the nation's capital are soaked in blood as political upheaval and rising tensions between masterless, wandering ronin and government samurai set the stage for one of the most turbulent times in Japan's history. Young orphan Nio is no stranger to the harsh realities of the world, and yet he can't help but cling to his burning passion for justice and desire to change the world for the better.<br><br>\n\nOne day, he crosses paths with two men who will become central figures of the coming revolution: Hijikata Toshizo and Okita Souji, two of the founding members of a group of hated ronin known as the Miburo—who would later become known as the Shinsengumi. Inspired by the efforts of the so-called \"Blues Wolves of Mibu,\" Nio decides to join the ranks to help carve a path to the world he wishes to see. But with new betrayals and reversals every day, will Nio be able to stay true to his conscience?<br><br>\n\n(Source: Kodansha USA, edited)"
+    },
+    {
+      "id": "tt30476504",
+      "type": "series",
+      "name": "Kabushiki Gaisha Magi Lumiere",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171025-3HsBogFXuG1p.jpg",
+      "description": "Genres: Action, Comedy, Fantasy, Mahou Shoujo\nTags:Magic/Urban Fantasy/Work/Primarily Adult Cast/Female Protagonist/Software Development/Shounen/Crossdressing\n“Magical Girl”— A profession that undertakes the work of exterminating a kind of natural disaster called “Kaii.” Kana Sakuragi, a female college student who struggles with job hunting, is picked up by a magical girl startup company and…?! Magical Girl work-life starts now!\n<br><br>\n(Source: MANGA Plus)"
     },
     {
       "id": "tt20228550",
@@ -302,7 +302,7 @@
       "description": "Genres: Comedy, Fantasy, Mahou Shoujo\nTags:Shoujo/Magic/Female Protagonist/Henshin/Otaku Culture\nChizuko, who lives in Sakai City, Niigata Prefecture, is an otaku girl who is a big fan of the magical girl Berry Blossom who protects the city against the evil organisation Fossa Magna. However, nobody was worried about the battle of the two anymore because Chroma, the wicked evil villain, was too lazy and weak.<br>\n<br>\nSo Chizuko decided “I want to make my magical girl shine more…!” That desire (?) leads the shy junior high school student down a strange, evil path…"
     },
     {
-      "id": "tt0910592",
+      "id": "tt32832433",
       "type": "series",
       "name": "Touhai: Ura Rate Mahjong Touhai Roku",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173263-C6eSTwu7NLI4.jpg",
