Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "DAN DA DAN",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171018-4fYrq5E9Jv1m.jpg",
-      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Youkai/Aliens/Male Protagonist/Female Protagonist/Heterosexual/Urban Fantasy/Surreal Comedy/Shounen/Cult/Nudity\nThis is a story about Momo, a high school girl who comes from a family of spirit mediums, and her classmate Okarun, an occult fanatic. After Momo rescues Okarun from being bullied, they begin talking. However, an argument ensues between them since Momo believes in ghosts but denies aliens exist, and Okarun believes in aliens but denies ghosts exist.\n<br><br>\nTo prove to each other what they believe in is real, Momo goes to an abandoned hospital where a UFO has been spotted and Okarun goes to a tunnel rumored to be haunted. To their surprise, they each encounter overwhelming paranormal activities that transcend comprehension. Amid these predicaments, Momo awakens her hidden power and Okarun gains the power of a curse to overcome these new dangers! Their fateful love begins as well!?\n<br><br>\nThe story of the occult battle and adolescence starts!<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episode 1 before the Japanese television premiere occurred at Anime Expo July 6, 2024. <br>\n- Episodes 1-3 titled as <b>DAN DA DAN: FIRST ENCOUNTER</b> was pre-screened in advance in theaters on September 13, 2024. The regular TV broadcast begins October 2024.</i>"
+      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Urban Fantasy/Youkai/Aliens/Male Protagonist/Female Protagonist/Heterosexual/Surreal Comedy/Shounen/Cult/Nudity\nThis is a story about Momo, a high school girl who comes from a family of spirit mediums, and her classmate Okarun, an occult fanatic. After Momo rescues Okarun from being bullied, they begin talking. However, an argument ensues between them since Momo believes in ghosts but denies aliens exist, and Okarun believes in aliens but denies ghosts exist.\n<br><br>\nTo prove to each other what they believe in is real, Momo goes to an abandoned hospital where a UFO has been spotted and Okarun goes to a tunnel rumored to be haunted. To their surprise, they each encounter overwhelming paranormal activities that transcend comprehension. Amid these predicaments, Momo awakens her hidden power and Okarun gains the power of a curse to overcome these new dangers! Their fateful love begins as well!?\n<br><br>\nThe story of the occult battle and adolescence starts!<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episode 1 before the Japanese television premiere occurred at Anime Expo July 6, 2024. <br>\n- Episodes 1-3 titled as <b>DAN DA DAN: FIRST ENCOUNTER</b> was pre-screened in advance in theaters on August 31, 2024 in Asia, September 7, 2024 in Europe and September 13, 2024 in North America. The regular TV broadcast begins October 2024.</i>"
     },
     {
       "id": "tt10905902",
@@ -92,18 +92,18 @@
       "description": "Genres: Action, Fantasy, Supernatural\nTags:Urban Fantasy/Super Power/Shounen/Male Protagonist\nSequel to <i>Ao no Exorcist: Shimane Illuminati-hen.</i>"
     },
     {
-      "id": "tt31975847",
-      "type": "series",
-      "name": "Tensei Kizoku, Kantei Skill de Nariagaru 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178434-UtRCL4WqNcgv.png",
-      "description": "Genres: Adventure, Fantasy\nTags:Coming of Age/Isekai/Magic/Swordplay/Male Protagonist/Shounen\nThe second season of <i>Tensei Kizoku, Kantei Skill de Nariagaru</i>."
-    },
-    {
       "id": "tt30689669",
       "type": "series",
       "name": "You are Ms. Servant",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172190-i1IqizIUcKkN.jpg",
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Maids/Assassins/School/Kuudere/Shounen/Female Protagonist/Heterosexual\nThis is the story of a maid who is all alone in the world, but who finally finds a family.<br>\n<br>\nTold from young that her only worth is as a killer, Yuki had known nothing else except cold efficiency and following orders. Now that she has a chance to leave her past behind, she arrives at the doorstep of Hitoyoshi Yokoya, asking to be employed… as a maid?! Thus begins the journey of a former assassin learning what it means to be ‘normal’!<br>\n<br>\n(Source: Shogakukan)"
+    },
+    {
+      "id": "tt31975847",
+      "type": "series",
+      "name": "Tensei Kizoku, Kantei Skill de Nariagaru 2nd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178434-UtRCL4WqNcgv.png",
+      "description": "Genres: Adventure, Fantasy\nTags:Coming of Age/Isekai/Magic/Swordplay/Male Protagonist/Shounen\nThe second season of <i>Tensei Kizoku, Kantei Skill de Nariagaru</i>."
     },
     {
       "id": "tt29370857",
@@ -274,18 +274,18 @@
       "description": "Genres: Fantasy, Romance\nTags:Dragons/Heterosexual\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32832421",
-      "type": "series",
-      "name": "How I Attended an All-Guy's Mixer",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169931-GjVPtlTyLzEG.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Crossdressing/Tomboy/Primarily Adult Cast/Shoujo/College/Heterosexual/Bisexual\nCollege student Tokiwa gets invited to a mixer by his female classmate Suo. But when he arrives with his friends, they're greeted by three dazzlingly handsome men?! But as the two groups get to know each other, they find themselves getting closer in unexpected ways.<br><br>\n(Source: MANGA UP!)"
-    },
-    {
       "id": "tt32508529",
       "type": "series",
       "name": "Nageki no Bourei ha Intai Shitai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175019-JFTirlMoA4SK.png",
       "description": "Genres: \nTags:\nIt's the golden age for treasure hunters—adventurers hungry for wealth, fame, power, and glory, who risk their lives in treasure vaults throughout the world.\n<br><br>\n“Let's become treasure hunters.”\n<br><br>\nKrai and his childhood friends swore to become the greatest of them all, but that dream should have died the day Krai realized he wasn't cut out for the job! Yet expectations continue to mount, right along with Krai's fear for his life. While his childhood friends climb closer toward their dream, this grieving soul has one simple wish: to pack it all in and retire!\n<br><br>\n(Source: J-Novel Club)"
+    },
+    {
+      "id": "tt32832421",
+      "type": "series",
+      "name": "How I Attended an All-Guy's Mixer",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169931-GjVPtlTyLzEG.jpg",
+      "description": "Genres: Comedy, Romance\nTags:Crossdressing/Tomboy/Primarily Adult Cast/Shoujo/College/Heterosexual/Bisexual\nCollege student Tokiwa gets invited to a mixer by his female classmate Suo. But when he arrives with his friends, they're greeted by three dazzlingly handsome men?! But as the two groups get to know each other, they find themselves getting closer in unexpected ways.<br><br>\n(Source: MANGA UP!)"
     },
     {
       "id": "tt32863895",
@@ -344,11 +344,11 @@
       "description": "Genres: Mecha, Sci-Fi\nTags:Full CGI/Real Robot/CGI\nIn the year 0079 of the Universal Century, the Principality of Zeon declares independence from the Earth Federation, plunging the two nations into war. Thanks to a revolutionary new weapon known as a Mobile Suit, the Zeon Force initially gains the upper hand. However, they lacked the power to take control of the entire Earth, bringing the war to a stalemate.<br><br>\nEleven months into the war, the Earth Federation forces manage to seize a Zeon-controlled base located in Eastern Europe. Among the mixed battalion headed to reclaim this base is Sorari and the Red Wolves division, a Mobile Suit platoon that has just descended from space.<br><br>\n(Source: Netflix)"
     },
     {
-      "id": "tt29475583",
+      "id": "tt33054366",
       "type": "series",
-      "name": "Kamierabi GOD.app Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172199-hDMw0MLQhbJt.jpg",
-      "description": "Genres: Action, Drama, Psychological, Supernatural\nTags:Full CGI\nThe second season of <i>Kamierabi</i>."
+      "name": "NegaPosi Angler",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179919-KLuGsnqnhkPb.jpg",
+      "description": "Genres: Drama\nTags:Fishing/Primarily Adult Cast\nThe anime's story centers on Tsunehiro Sasaki, a university student with a large debt and is told by his doctor that he only has two years left to live. Living the rest of his days in depression, Tsunehiro one day gets chased by a debt collector and falls into the sea. He is rescued by Hana, a girl who loves fishing, and her fishing friends including Takaaki.\n<br>\nHana urges Tsunehiro to experience fishing for the first time in his life and he starts to develop friendship with other fishing enthusiasts. Things start looking up for Tsunehiro as he starts working at the convenience store where Hana and Takaaki work, and he slowly gets hooked into fishing.\n<br><br>\n(Source: Anime News Network)"
     }
   ]
 }
