--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -141,18 +141,18 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Isekai/Josei\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt2552230",
-      "type": "series",
-      "name": "Demon Lord 2099",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163135-NjvXyXvTYSHH.jpg",
-      "description": "Genres: Action, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Demons/Magic/Male Protagonist/Primarily Adult Cast\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
-    },
-    {
       "id": "tt32792739",
       "type": "series",
       "name": "Yakuza Fiancé",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170468-kD2X9O2XM9KH.jpg",
       "description": "Genres: Comedy, Drama, Romance\nTags:Female Protagonist/Yandere/Yakuza/Male Protagonist/Urban/Crime/Arranged Marriage/Seinen/Gore\nSomei Renji is Somei Yoshino’s grandfather and leader of the “Somei Group”, the Kansai region’s biggest yakuza group. When he arranges for her to be married to Miyama Kirishima, Yoshino has to move to “Miyama Clan” estate, the Kanto region’s biggest yakuza group. Kirishima warmly welcomes Yoshino and is such a pleasant, personable, and nice young man that nobody would suspect that he comes from a yakuza family. This puts Yoshino at ease even though she was initially feeling insecure in this unfamiliar place.<br>\n<br>\nBut then, a certain event leads to Yoshino witnessing the real Kirishima.\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt2552230",
+      "type": "series",
+      "name": "Demon Lord 2099",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163135-NjvXyXvTYSHH.jpg",
+      "description": "Genres: Action, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Demons/Magic/Male Protagonist/Primarily Adult Cast\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
     },
     {
       "id": "tt29473209",
@@ -179,7 +179,7 @@
       "id": "tt19244410",
       "type": "series",
       "name": "Demon Lord, Retry! R",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168500-q5aLjjfUrZvy.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168500-BsAkVbYskyDq.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Isekai/Magic\nThe Demon Lord continues his adventure in this re-vamped series! After encountering the mysterious entity in the lowest level of the Bastille Dungeon, he sets out for Hellion Territory, where Grand Devils vie for domination of the realm. With the addition of a new advisor—the (seemingly) hopeless optimist Akane—the Demon Lord’s army grows even more colorful, and their hijinks even wackier.<br><br>\n(Source:  J-Novel Club)"
     },
     {
@@ -232,7 +232,7 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:\nThe story follows Raust, a healer who can only use one basic spell and is expelled from a first-class party for being too weak. While the leader of that party realizes how great his abilities actually are after hiring another healer, Raust finds new friends like Narsena who support him and his rise to the top.<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt1169193",
+      "id": "tt32832435",
       "type": "series",
       "name": "Good Bye, Dragon Life",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176053-HfPo4pUm6Ktg.jpg",
@@ -262,8 +262,8 @@
     {
       "id": "tt20228550",
       "type": "series",
-      "name": "Nanatsu no Taizai: Mokushiroku no Yonkishi 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176292-zqMmOqKWqUu7.jpg",
+      "name": "The Seven Deadly Sins: Four Knights of the Apocalypse Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176292-meJTWM8zQjjp.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Shounen/Otaku Culture\nThe second season of <i>Nanatsu no Taizai: Mokushiroku no Yonkishi.</i>"
     },
     {
